--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@
     <body>
         <h1>Srinivas Mane</h1>
     </body>
+    <h6>MANALI</h6>
+    <p>Manali has <b>mountains</b> covered with <b>snow</b> and many <b>nature spots</b> me and my friends went there for vacation and it was a memorable trip</p>
 </html>
