--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
     </body>
     <h6>MANALI</h6>
     <p>Manali has scenic <b>mountains</b> covered with <b>snow</b> and many <b>nature spots</b> me and my friends went there for vacation and it was a memorable trip</p>
+    <title> Activities</title>
 </html>
