--- a/index.html
+++ b/index.html
@@ -8,7 +8,5 @@
     </body>
     <h6>MANALI</h6>
     <p>Manali has scenic <b>mountains</b> covered with <b>snow</b> and many <b>nature spots</b> me and my friends went there for vacation and it was a memorable trip</p>
-    <head>
-        <title> Activities</title>
-    </head>
+    <h3> Activities</h3>
 </html>
