--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <p>Manali has scenic <b>mountains</b> covered with <b>snow</b> and many <b>nature spots</b> me and my friends went there for vacation and it was a memorable trip</p>
     <h3> Activities</h3>
     <ol>
-        <li>1.Trekking</li>
-        <li>2.Road trip to Rohtang pass</li>
-        <li>3.went to hidimba temple</li>
+        <li>Trekking</li>
+        <li>Road trip to Rohtang pass</li>
+        <li>went to hidimba temple</li>
     </ol>
 </html>
