--- a/index.html
+++ b/index.html
@@ -15,4 +15,9 @@
         <li>Road trip to Rohtang pass</li>
         <li>went to hidimba temple</li>
     </ol>
+    <ul>
+        <li>Chicken Tikka</li>
+        <li>Khatta</li>
+        <li>Chha Ghost</li>
+    </ul>
 </html>
