--- a/mystats.html
+++ b/mystats.html
@@ -10,6 +10,6 @@
             <p>Mutton Biryani is a tantalizing blend of tender mutton meat, fragrant rice, and a medley of aromatic spices.
                 and personally i love and enjoy eating mutton Biryani with full of spice
             </p>
-            <img src="C:\Users\S564159\Documents\webapps-repos\44563-webapps-f23-assignment3-srinivasmane09\Biryani.jpeg" alt="Mutton Biryani">
+            <img src="C:\Users\S564159\Downloads\Biryani.jpg" alt="Mutton Biryani">
     </body>
 </html>
