--- a/index.html
+++ b/index.html
@@ -20,4 +20,33 @@
             <li>Chha Ghost</li>
         </ul>
     </ol>
+    <a href="mystats.html" target="_blank">mystats link</a><br>
+    <hr>
+    <h2>Sports Table</h2>
+    <p>The below table illustrates the sports to recommend</p>
+    <tr>
+        <th>Sport</th>
+        <th>Reason to play</th>
+        <th>Hours/Week</th>
+    </tr>
+    <tr>
+        <td>Cricket</td>
+        <td>Improves Concentration</td>
+        <td>15</td>
+    </tr>
+    <tr>
+        <td>Chess</td>
+        <td>Higher thinking skills</td>
+        <td>11</td>
+    </tr>
+    <tr>
+        <td>Football</td>
+        <td>cardiovascular health</td>
+        <td>18</td>
+    </tr>
+    <tr>
+        <td>Basketball</td>
+        <td>balance and coordination</td>
+        <td>16</td>
+    </tr>
 </html>
